--- a/app/styles/conservation.css
+++ b/app/styles/conservation.css
@@ -7,7 +7,7 @@
     /*background-color: #555;*/
 }
 #cons-slide0 p:first-child {
-    border: 1px solid #777;
+    border: 1px solid #AB650D;
     -webkit-border-radius: 0 4em 0;
     -moz-border-radius: 0 4em 0;
     border-radius: 0 4em 0;
